force-app/main/default/objects/Contact/fields/Cumpleanios__c.field-meta.xml
<CustomField>
    <fullName>Cumpleanios__c</fullName>
    <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siguiente Cumpleaños</label>
    <type>Date</type>
</CustomField>