force-app/main/default/objects/Contact/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <label>Titulo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Sra.</fullName>
            </value>
            <value>
                <fullName>Srita.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Ing.</fullName>
            </value>
            <value>
                <fullName>Lic.</fullName>
            </value>
            <value>
                <fullName>Arq.</fullName>
            </value>
            <value>
                <fullName>Tec.</fullName>
            </value>
            <value>
                <fullName>C.P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>